# NaiveGomoku

./: CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  judge.cpp  judge.h  main.cpp  player.cpp  player.h  scheduler.cpp  scheduler.h  utils.cpp  utils.h
